# aiven-site-checker

./: .buildinfo  .gitignore  Dockerfile  LICENCE  README.rst  apidocs.html  architecture.html  config.yaml  configuration.html  docker-compose.yaml  environment.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: apidocs.doctree  architecture.doctree  configuration.doctree  environment.doctree  environment.pickle  index.doctree
.github/workflows/: build.yaml  release.yaml  sphinx.yaml  test.yaml  unittests.yaml
_sources/: apidocs.rst.txt  architecture.rst.txt  index.rst.txt
docs/source/: .index.rst.swp  conf.py  configuration.rst  environment.rst  index.rst
src/chweb/: __init__.py  base.py  cmd.py  collector.py  config.py  consumer.py  models.py
src/webstat/: cmd.py  collector.py  consumer.py
tests/: conftest.py  test_checker.py  test_consumer.py  test_db.py  test_producer.py
