[metadata]
name = webstat
summary = Tool for collecting website stats.
description-file = README.rst
author = Vladan Popovic
author-email = vladanovic@gmail.com
classifier =
    Environment :: Automation
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    wstat_collect = webstat.cmd:collect
    wstat_consume = webstat.cmd:consume

[bdist_wheel]
universal = 1
