[metadata]
name = chweb
summary = Tool for checking websites and collecting the results.
description-file = README.rst
author = Vladan Popovic
author-email = vladanovic@gmail.com
classifier =
    Environment :: Automation
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    chweb_collect = chweb.cmd:collect
    chweb_consume = chweb.cmd:consume

[bdist_wheel]
universal = 1
